# Guessing

./: .gitignore  CMakeLists.txt  animal.cpp  animalgenerator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  round.cpp  round.h
src/: animal.h  animalgenerator.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: CMakeLists.txt  main.cpp  tst_animalgenerator.cpp  tst_animals.cpp  tst_roundtests.cpp
